css/demo.css
/* ... */
#walk-in-container a:hover .arrow:before{
    animation: animate-arrow-2 1s ease-in-out infinite 0.1s;
}
#walk-in-container a:hover .arrow:after{
    animation: animate-arrow-3 1s ease-in-out infinite 0.2s;
}
#walk-in-container a:hover .arrow span{
    animation: animate-arrow-1 1s ease-in-out infinite;
}
@keyframes animate-arrow-1 {
    0%{transform:translateX(-40px);opacity: 0;}
    70%,100%{transform:translateX(0px);opacity: 1;}
}
@keyframes animate-arrow-2 {
    0%{transform:translateX(-20px);opacity: 0;}
    70%,100%{transform:translateX(0px);opacity: 0.5;}
}
@keyframes animate-arrow-3 {
    0%{transform:translateX(-10px);opacity: 0;}
    70%,100%{transform:translateX(0px);opacity: 0.3;}
}
@media (max-width :767px){
    #walk-in-container{
        width: 80%;
        height: 50px;
    }
    #walk-in-container marquee {
        width: calc(100% - 10px);
    }
    #walk-in-container a {
            padding-left: 12px;
            padding-right: 32px;
            text-decoration: none;
            margin-bottom: 5px;
            font-size: 14px;
            position: absolute;
            right: -81px;
        }
    .banner #walkin-content{
        position: relative;
        top: 0;
    }
    #walkin-content h1{
        font-size: 20px;
    }
    #walkin-content .walkinbtn a{
        font-size:20px;
    }
    .nav>li>a {
        position: relative;
        display: block;
        padding: 10px 15px;
        font-size: 16px;
    }
    #walk-in-container a .arrow:before{
        right: 2px;
        height: 10px;
    }
    #walk-in-container a .arrow:after{
        right: 9px;
        height: 10px;
    }
}
/*---------------------------------------walkin notification css ends------------------------------*/

/*---------------------------------------footer css--------------------------------*/
a.link-footer {
    display: inline-block;
    font-size: 20px;
    text-decoration: none;
    margin-bottom: 10px;
    padding: 5px 0;
    color: floralwhite;
}
.footer-image li{
    display: block;
    float: left;
    position: relative;
    margin: 0;
    padding: 0;
    background: #333;
    width: 227.6px;
    height: 125px;
    opacity: 0.5;
    background-position: 50% 50%;
    background-size: cover;
}
.footer-image li::after{
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0.5;
    background: rgb(0, 0, 0);
}
.footer-position{
    position: absolute;
}
.footer-block-right{
    position: absolute;
    right: 0;
}
.footer-height{
    height: 500px;
}
.footer-image li:hover{
    opacity: 1;
}
.footer-image li:hover::after{
    background: rgba(255, 233, 233, 0);
}
.footer-primary-link{
    margin-top: 19px;
    width: 35%;
    float: left;
}
.footer-secondary-link{
    width: 65%;
    float: left;
    margin-top: 19px;
}
a.link-footer:hover{
    color: #c54041;
    font-weight: bold;
}
.footer-desc-para{
    line-height: 1.3;
}
.footer-desc {
    background: #f7f7f7;
    padding: 30px 25px;
    border: 1px solid #dbdbdb;
}
.footer-desc-link a {
    display: inline-block;
    margin-bottom: 5px;
}
.footer-desc-link a:hover {
    text-decorations: none;
}
.footer-logo{
    width: 70px;
}
.footer-logo-small{
    width: 40px;
}
.footer-copy{
    overflow: hidden;
    background: #5f5f5f;
    color: #c1c1c1;
}
footer{
    background: #383536;
}
.link-footer-services {
    margin-bottom: 20px;
    border-bottom: 1px solid #808080;
}
.footer-height {
    height: 400px;
}
.footer-block {
    height: 100%;
}

/*------------------------------team page css----------------------------*/
.team-container{
    width: 100%;
    height: 278px;
    border: 5px solid #fff;
    margin-top: 50px;
}
.team-container .image-container:hover .background-image.hover {
    opacity: 1;
}
.team-section-img{
    max-height: 340px;
}
.team-section-img .team-img2{
    opacity: 0;
    position: absolute;
    top: 12px;
    width: 330px;
    height: 291px;
}
.team-section-img:hover .team-img2{
    opacity: 1;
    transition: 0.2s all;
}
.team-section-img .image-constant-hover {
    display: none;
}
.team-section-img:hover .image-constant {
    display: none;
}
.team-section-img:hover .image-constant-hover {
    display: block;
}
.team-section-img img{
    height: 280px;
}
.team-name-head{
    padding: 18px 0;
    margin-bottom: 20px;
}
.team-name{
    position: relative;
    z-index: 999;
}
.team-section-img:hover .overlay img{
    opacity: 1;
}
.overlay img{
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 373px;
    width: 100%;
    opacity: 0;
    padding: 17px 29px;
    border-radius: 50%;
    transition: .5s ease;
}
.ceo-section-content{
    display: flex;
    justify-content: center;
}

/*-------------team.css file start------------*/
.team-container{
    width: 100%;
    height: auto;
    border: 5px solid #fff;
    margin-top: 50px;
    -ms-touch-action: manipulation; /* IE10  */
    touch-action: manipulation;
    cursor: pointer;
}
.team-container-top {
    margin-top: 50px;
}
.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    cursor: pointer;
    border-radius: 7%;
    transition: .5s ease;
    background: rgba(113, 2, 2, .86)
}
.text {
    color: #dccccc;
    font-size: 20em;
    position: absolute;
    top: 50%;
    opacity: 0;
    text-align: center;
}
.team-container:hover .overlay>.text {
    opacity: 1;
    left: 50%;
    transition: .4s left;
    -webkit-transition: .4s left;
    -moz-transition: .4s left;
    -ms-transition: .4s left;
    -o-transition: .4s left
}
.team-container:hover .overlay {
    opacity: 1;
    cursor: pointer;
}
.image-container1 {
    border-top-right-radius: 65px;
    box-shadow: 4px -5px 7px rgba(0, 0, 0, .25)
}
.image-container2 {
    box-shadow: 0 -3px 10px #56515178;
    width: 100%;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
}
/* ... */

